--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="https://drive.google.com/uc?export=view&id=1m_sbpz41LTO-jaxcdTXdgxdzad6HmU9k">
+    <img src="https://drive..google.com/uc?export=view&id=1m_sbpz41LTO-jaxcdTXdgxdzad6HmU9k">
 </body>
 
 </html>
